--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.1.0
   google_fonts: ^4.0.4
+  font_awesome_flutter: ^10.2.1
+  curved_navigation_bar: ^1.0.3
 
 
 dev_dependencies:
