--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+   
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.1.0
   google_fonts: ^4.0.4
-
+  font_awesome_flutter: '>= 4.7.0'
 
 dev_dependencies:
   flutter_test:
