--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   google_fonts: ^4.0.4
   font_awesome_flutter: ^10.2.1
   curved_navigation_bar: ^1.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_slidable: ^3.0.0
+  dotted_border: ^2.0.0+1
+  percent_indicator: ^4.2.3
 
 
 dev_dependencies:
@@ -51,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.1.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,6 +74,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icons/up-arrow.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
