--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_slidable: ^3.0.0
   dotted_border: ^2.0.0+1
   percent_indicator: ^4.2.3
+  timer_builder: ^2.0.0
+  lottie: ^2.0.0
 
 
 dev_dependencies:
